Fix layout on mobile

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -55,3 +55,7 @@ a.glyphicon {
 .no-show {
 	opacity: 0.5;
 }
+
+.btn {
+	white-space: normal;
+}
